chnges in index.html modified:   index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>projet Git/GitHub</h1>
+    <h2>essai de relation entre vscode et github</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis eveniet
       quam quae nulla fugiat impedit illum aliquam voluptatum maxime quod ut
